internal/parser/yarnspinner_parser.go
// Code generated from internal/parser/YarnSpinnerParser.g4 by ANTLR 4.13.0. DO NOT EDIT.

package parser // YarnSpinnerParser

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type YarnSpinnerParser struct {
	*antlr.BaseParser
}

var YarnSpinnerParserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func yarnspinnerparserParserInit() {
	staticData := &YarnSpinnerParserParserStaticData
	staticData.LiteralNames = []string{
		"", "", "", "", "", "", "", "", "'---'", "", "'#'", "", "", "'==='",
		"'->'", "'=>'", "'<<'", "", "", "'\\'", "", "", "", "", "", "", "",
		"", "", "'always'", "'true'", "'false'", "'null'", "", "", "", "", "",
		"", "", "", "", "", "", "'+='", "'-='", "'*='", "'%='", "'/='", "'+'",
		"'-'", "'*'", "'/'", "'%'", "'('", "')'", "','", "'as'", "", "", "'}'",
		"", "'.'", "", "", "", "", "", "", "", "'endif'", "", "", "", "", "",
		"", "", "", "'once'", "'endonce'", "", "", "", "", "'{'", "", "", "'string'",
		"'number'", "'bool'",
	}
	staticData.SymbolicNames = []string{
		"", "INDENT", "DEDENT", "BLANK_LINE_FOLLOWING_OPTION", "WS", "COMMENT",
		"NEWLINE", "ID", "BODY_START", "HEADER_DELIMITER", "HASHTAG", "REST_OF_LINE",
		"BODY_WS", "BODY_END", "SHORTCUT_ARROW", "LINE_GROUP_ARROW", "COMMAND_START",
		"EXPRESSION_START", "ESCAPED_ANY", "TEXT_ESCAPE", "TEXT_COMMENT", "TEXT",
		"UNESCAPABLE_CHARACTER", "TEXT_COMMANDHASHTAG_WS", "TEXT_COMMANDHASHTAG_COMMENT",
		"TEXT_COMMANDHASHTAG_ERROR", "HASHTAG_WS", "HASHTAG_TEXT", "EXPR_WS",
		"EXPRESSION_WHEN_ALWAYS", "KEYWORD_TRUE", "KEYWORD_FALSE", "KEYWORD_NULL",
		"OPERATOR_ASSIGNMENT", "OPERATOR_LOGICAL_LESS_THAN_EQUALS", "OPERATOR_LOGICAL_GREATER_THAN_EQUALS",
		"OPERATOR_LOGICAL_EQUALS", "OPERATOR_LOGICAL_LESS", "OPERATOR_LOGICAL_GREATER",
		"OPERATOR_LOGICAL_NOT_EQUALS", "OPERATOR_LOGICAL_AND", "OPERATOR_LOGICAL_OR",
		"OPERATOR_LOGICAL_XOR", "OPERATOR_LOGICAL_NOT", "OPERATOR_MATHS_ADDITION_EQUALS",
		"OPERATOR_MATHS_SUBTRACTION_EQUALS", "OPERATOR_MATHS_MULTIPLICATION_EQUALS",
		"OPERATOR_MATHS_MODULUS_EQUALS", "OPERATOR_MATHS_DIVISION_EQUALS", "OPERATOR_MATHS_ADDITION",
		"OPERATOR_MATHS_SUBTRACTION", "OPERATOR_MATHS_MULTIPLICATION", "OPERATOR_MATHS_DIVISION",
		"OPERATOR_MATHS_MODULUS", "LPAREN", "RPAREN", "COMMA", "EXPRESSION_AS",
		"STRING", "FUNC_ID", "EXPRESSION_END", "VAR_ID", "DOT", "NUMBER", "COMMAND_NEWLINE",
		"COMMAND_WS", "COMMAND_IF", "COMMAND_ELSEIF", "COMMAND_ELSE", "COMMAND_SET",
		"COMMAND_ENDIF", "COMMAND_CALL", "COMMAND_DECLARE", "COMMAND_JUMP",
		"COMMAND_DETOUR", "COMMAND_RETURN", "COMMAND_ENUM", "COMMAND_CASE",
		"COMMAND_ENDENUM", "COMMAND_ONCE", "COMMAND_ENDONCE", "COMMAND_LOCAL",
		"COMMAND_END", "COMMAND_TEXT_NEWLINE", "COMMAND_TEXT_END", "COMMAND_EXPRESSION_START",
		"COMMAND_TEXT", "COMMAND_ID_NEWLINE", "TYPE_STRING", "TYPE_NUMBER",
		"TYPE_BOOL",
	}
	staticData.RuleNames = []string{
		"dialogue", "file_hashtag", "node", "header", "header_when_expression",
		"body", "statement", "line_statement", "line_formatted_text", "hashtag",
		"line_condition", "expression", "value", "variable", "function_call",
		"typeMemberReference", "if_statement", "if_clause", "else_if_clause",
		"else_clause", "set_statement", "call_statement", "command_statement",
		"command_formatted_text", "shortcut_option_statement", "shortcut_option",
		"line_group_statement", "line_group_item", "declare_statement", "enum_statement",
		"enum_case_statement", "jump_statement", "return_statement", "once_statement",
		"once_primary_clause", "once_alternate_clause",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// YarnSpinnerParserInit initializes any static state used to implement YarnSpinnerParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewYarnSpinnerParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func YarnSpinnerParserInit() {
	staticData := &YarnSpinnerParserParserStaticData
	staticData.once.Do(yarnspinnerparserParserInit)
}

// NewYarnSpinnerParser produces a new parser instance for the optional input antlr.TokenStream.
func NewYarnSpinnerParser(input antlr.TokenStream) *YarnSpinnerParser {
	YarnSpinnerParserInit()
	this := new(YarnSpinnerParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &YarnSpinnerParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "YarnSpinnerParser.g4"

	return this
}

// YarnSpinnerParser tokens.
const (
	YarnSpinnerParserEOF                                  = antlr.TokenEOF
	YarnSpinnerParserINDENT                               = 1
	YarnSpinnerParserDEDENT                               = 2
	YarnSpinnerParserBLANK_LINE_FOLLOWING_OPTION          = 3
	YarnSpinnerParserWS                                   = 4
	YarnSpinnerParserCOMMENT                              = 5
	YarnSpinnerParserNEWLINE                              = 6
	YarnSpinnerParserID                                   = 7
	YarnSpinnerParserBODY_START                           = 8
	YarnSpinnerParserHEADER_DELIMITER                     = 9
	YarnSpinnerParserHASHTAG                              = 10
	YarnSpinnerParserREST_OF_LINE                         = 11
	YarnSpinnerParserBODY_WS                              = 12
	YarnSpinnerParserBODY_END                             = 13
	YarnSpinnerParserSHORTCUT_ARROW                       = 14
	YarnSpinnerParserLINE_GROUP_ARROW                     = 15
	YarnSpinnerParserCOMMAND_START                        = 16
	YarnSpinnerParserEXPRESSION_START                     = 17
	YarnSpinnerParserESCAPED_ANY                          = 18
	YarnSpinnerParserTEXT_ESCAPE                          = 19
	YarnSpinnerParserTEXT_COMMENT                         = 20
	YarnSpinnerParserTEXT                                 = 21
	YarnSpinnerParserUNESCAPABLE_CHARACTER                = 22
	YarnSpinnerParserTEXT_COMMANDHASHTAG_WS               = 23
	YarnSpinnerParserTEXT_COMMANDHASHTAG_COMMENT          = 24
	YarnSpinnerParserTEXT_COMMANDHASHTAG_ERROR            = 25
	YarnSpinnerParserHASHTAG_WS                           = 26
	YarnSpinnerParserHASHTAG_TEXT                         = 27
	YarnSpinnerParserEXPR_WS                              = 28
	YarnSpinnerParserEXPRESSION_WHEN_ALWAYS               = 29
	YarnSpinnerParserKEYWORD_TRUE                         = 30
	YarnSpinnerParserKEYWORD_FALSE                        = 31
	YarnSpinnerParserKEYWORD_NULL                         = 32
	YarnSpinnerParserOPERATOR_ASSIGNMENT                  = 33
	YarnSpinnerParserOPERATOR_LOGICAL_LESS_THAN_EQUALS    = 34
	YarnSpinnerParserOPERATOR_LOGICAL_GREATER_THAN_EQUALS = 35
	YarnSpinnerParserOPERATOR_LOGICAL_EQUALS              = 36
	YarnSpinnerParserOPERATOR_LOGICAL_LESS                = 37
	YarnSpinnerParserOPERATOR_LOGICAL_GREATER             = 38
	YarnSpinnerParserOPERATOR_LOGICAL_NOT_EQUALS          = 39
	YarnSpinnerParserOPERATOR_LOGICAL_AND                 = 40
	YarnSpinnerParserOPERATOR_LOGICAL_OR                  = 41
	YarnSpinnerParserOPERATOR_LOGICAL_XOR                 = 42
	YarnSpinnerParserOPERATOR_LOGICAL_NOT                 = 43
	YarnSpinnerParserOPERATOR_MATHS_ADDITION_EQUALS       = 44
	YarnSpinnerParserOPERATOR_MATHS_SUBTRACTION_EQUALS    = 45
	YarnSpinnerParserOPERATOR_MATHS_MULTIPLICATION_EQUALS = 46
	YarnSpinnerParserOPERATOR_MATHS_MODULUS_EQUALS        = 47
	YarnSpinnerParserOPERATOR_MATHS_DIVISION_EQUALS       = 48
	YarnSpinnerParserOPERATOR_MATHS_ADDITION              = 49
	YarnSpinnerParserOPERATOR_MATHS_SUBTRACTION           = 50
	YarnSpinnerParserOPERATOR_MATHS_MULTIPLICATION        = 51
	YarnSpinnerParserOPERATOR_MATHS_DIVISION              = 52
	YarnSpinnerParserOPERATOR_MATHS_MODULUS               = 53
	YarnSpinnerParserLPAREN                               = 54
	YarnSpinnerParserRPAREN                               = 55
	YarnSpinnerParserCOMMA                                = 56
	YarnSpinnerParserEXPRESSION_AS                        = 57
	YarnSpinnerParserSTRING                               = 58
	YarnSpinnerParserFUNC_ID                              = 59
	YarnSpinnerParserEXPRESSION_END                       = 60
	YarnSpinnerParserVAR_ID                               = 61
	YarnSpinnerParserDOT                                  = 62
	YarnSpinnerParserNUMBER                               = 63
	YarnSpinnerParserCOMMAND_NEWLINE                      = 64
	YarnSpinnerParserCOMMAND_WS                           = 65
	YarnSpinnerParserCOMMAND_IF                           = 66
	YarnSpinnerParserCOMMAND_ELSEIF                       = 67
	YarnSpinnerParserCOMMAND_ELSE                         = 68
	YarnSpinnerParserCOMMAND_SET                          = 69
	YarnSpinnerParserCOMMAND_ENDIF                        = 70
	YarnSpinnerParserCOMMAND_CALL                         = 71
	YarnSpinnerParserCOMMAND_DECLARE                      = 72
	YarnSpinnerParserCOMMAND_JUMP                         = 73
	YarnSpinnerParserCOMMAND_DETOUR                       = 74
	YarnSpinnerParserCOMMAND_RETURN                       = 75
	YarnSpinnerParserCOMMAND_ENUM                         = 76
	YarnSpinnerParserCOMMAND_CASE                         = 77
	YarnSpinnerParserCOMMAND_ENDENUM                      = 78
	YarnSpinnerParserCOMMAND_ONCE                         = 79
	YarnSpinnerParserCOMMAND_ENDONCE                      = 80
	YarnSpinnerParserCOMMAND_LOCAL                        = 81
	YarnSpinnerParserCOMMAND_END                          = 82
	YarnSpinnerParserCOMMAND_TEXT_NEWLINE                 = 83
	YarnSpinnerParserCOMMAND_TEXT_END                     = 84
	YarnSpinnerParserCOMMAND_EXPRESSION_START             = 85
	YarnSpinnerParserCOMMAND_TEXT                         = 86
	YarnSpinnerParserCOMMAND_ID_NEWLINE                   = 87
	YarnSpinnerParserTYPE_STRING                          = 88
	YarnSpinnerParserTYPE_NUMBER                          = 89
	YarnSpinnerParserTYPE_BOOL                            = 90
)

// YarnSpinnerParser rules.
const (
	YarnSpinnerParserRULE_dialogue                  = 0
	YarnSpinnerParserRULE_file_hashtag              = 1
	YarnSpinnerParserRULE_node                      = 2
	YarnSpinnerParserRULE_header                    = 3
	YarnSpinnerParserRULE_header_when_expression    = 4
	YarnSpinnerParserRULE_body                      = 5
	YarnSpinnerParserRULE_statement                 = 6
	YarnSpinnerParserRULE_line_statement            = 7
	YarnSpinnerParserRULE_line_formatted_text       = 8
	YarnSpinnerParserRULE_hashtag                   = 9
	YarnSpinnerParserRULE_line_condition            = 10
	YarnSpinnerParserRULE_expression                = 11
	YarnSpinnerParserRULE_value                     = 12
	YarnSpinnerParserRULE_variable                  = 13
	YarnSpinnerParserRULE_function_call             = 14
	YarnSpinnerParserRULE_typeMemberReference       = 15
	YarnSpinnerParserRULE_if_statement              = 16
	YarnSpinnerParserRULE_if_clause                 = 17
	YarnSpinnerParserRULE_else_if_clause            = 18
	YarnSpinnerParserRULE_else_clause               = 19
	YarnSpinnerParserRULE_set_statement             = 20
	YarnSpinnerParserRULE_call_statement            = 21
	YarnSpinnerParserRULE_command_statement         = 22
	YarnSpinnerParserRULE_command_formatted_text    = 23
	YarnSpinnerParserRULE_shortcut_option_statement = 24
	YarnSpinnerParserRULE_shortcut_option           = 25
	YarnSpinnerParserRULE_line_group_statement      = 26
	YarnSpinnerParserRULE_line_group_item           = 27
	YarnSpinnerParserRULE_declare_statement         = 28
	YarnSpinnerParserRULE_enum_statement            = 29
	YarnSpinnerParserRULE_enum_case_statement       = 30
	YarnSpinnerParserRULE_jump_statement            = 31
	YarnSpinnerParserRULE_return_statement          = 32
	YarnSpinnerParserRULE_once_statement            = 33
	YarnSpinnerParserRULE_once_primary_clause       = 34
	YarnSpinnerParserRULE_once_alternate_clause     = 35
)

// IDialogueContext is an interface to support dynamic dispatch.
type IDialogueContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllNode() []INodeContext
	Node(i int) INodeContext
	AllFile_hashtag() []IFile_hashtagContext
	File_hashtag(i int) IFile_hashtagContext

	// IsDialogueContext differentiates from other interfaces.
	IsDialogueContext()
}

type DialogueContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDialogueContext() *DialogueContext {
	var p = new(DialogueContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = YarnSpinnerParserRULE_dialogue
	return p
}

func InitEmptyDialogueContext(p *DialogueContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = YarnSpinnerParserRULE_dialogue
}

func (*DialogueContext) IsDialogueContext() {}

func NewDialogueContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DialogueContext {
	var p = new(DialogueContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = YarnSpinnerParserRULE_dialogue

	return p
}

func (s *DialogueContext) GetParser() antlr.Parser { return s.parser }

func (s *DialogueContext) AllNode() []INodeContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(INodeContext); ok {
			len++
		}
	}

	tst := make([]INodeContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(INodeContext); ok {
			tst[i] = t.(INodeContext)
			i++
		}
	}

	return tst
}

func (s *DialogueContext) Node(i int) INodeContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INodeContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(INodeContext)
}

func (s *DialogueContext) AllFile_hashtag() []IFile_hashtagContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IFile_hashtagContext); ok {
			len++
		}
	}

	tst := make([]IFile_hashtagContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IFile_hashtagContext); ok {
			tst[i] = t.(IFile_hashtagContext)
			i++
		}
	}

	return tst
}

func (s *DialogueContext) File_hashtag(i int) IFile_hashtagContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFile_hashtagContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFile_hashtagContext)
}

func (s *DialogueContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DialogueContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DialogueContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(YarnSpinnerParserListener); ok {
		listenerT.EnterDialogue(s)
	}
}

func (s *DialogueContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(YarnSpinnerParserListener); ok {
		listenerT.ExitDialogue(s)
	}
}

func (p *YarnSpinnerParser) Dialogue() (localctx IDialogueContext) {
	localctx = NewDialogueContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, YarnSpinnerParserRULE_dialogue)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(75)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == YarnSpinnerParserHASHTAG {
		{
			p.SetState(72)
			p.File_hashtag()
		}

		p.SetState(77)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

	p.SetState(79)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == YarnSpinnerParserID {
		{
			p.SetState(78)
			p.Node()
		}

		p.SetState(81)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IFile_hashtagContext is an interface to support dynamic dispatch.
type IFile_hashtagContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetInnerText returns the text token.
	GetInnerText() antlr.Token

	// SetText sets the text token.
	SetText(antlr.Token)

	// Getter signatures
	HASHTAG() antlr.TerminalNode
	HASHTAG_TEXT() antlr.TerminalNode

	// IsFile_hashtagContext differentiates from other interfaces.
	IsFile_hashtagContext()
}

type File_hashtagContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
	text   antlr.Token
}

func NewEmptyFile_hashtagContext() *File_hashtagContext {
	var p = new(File_hashtagContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = YarnSpinnerParserRULE_file_hashtag
	return p
}

func InitEmptyFile_hashtagContext(p *File_hashtagContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = YarnSpinnerParserRULE_file_hashtag
}

func (*File_hashtagContext) IsFile_hashtagContext() {}

func NewFile_hashtagContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *File_hashtagContext {
	var p = new(File_hashtagContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = YarnSpinnerParserRULE_file_hashtag

	return p
}

func (s *File_hashtagContext) GetParser() antlr.Parser { return s.parser }

func (s *File_hashtagContext) GetInnerText() antlr.Token { return s.text }

func (s *File_hashtagContext) SetText(v antlr.Token) { s.text = v }

func (s *File_hashtagContext) HASHTAG() antlr.TerminalNode {
	return s.GetToken(YarnSpinnerParserHASHTAG, 0)
}

func (s *File_hashtagContext) HASHTAG_TEXT() antlr.TerminalNode {
	return s.GetToken(YarnSpinnerParserHASHTAG_TEXT, 0)
}

func (s *File_hashtagContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *File_hashtagContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *File_hashtagContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(YarnSpinnerParserListener); ok {
		listenerT.EnterFile_hashtag(s)
	}
}

func (s *File_hashtagContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(YarnSpinnerParserListener); ok {
		listenerT.ExitFile_hashtag(s)
	}
}

func (p *YarnSpinnerParser) File_hashtag() (localctx IFile_hashtagContext) {
	localctx = NewFile_hashtagContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, YarnSpinnerParserRULE_file_hashtag)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(83)
		p.Match(YarnSpinnerParserHASHTAG)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(84)

		var _m = p.Match(YarnSpinnerParserHASHTAG_TEXT)

		localctx.(*File_hashtagContext).text = _m
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// INodeContext is an interface to support dynamic dispatch.
type INodeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	BODY_START() antlr.TerminalNode
	Body() IBodyContext
	BODY_END() antlr.TerminalNode
	AllHeader() []IHeaderContext
	Header(i int) IHeaderContext

	// IsNodeContext differentiates from other interfaces.
	IsNodeContext()
}

type NodeContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyNodeContext() *NodeContext {
	var p = new(NodeContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = YarnSpinnerParserRULE_node
	return p
}

func InitEmptyNodeContext(p *NodeContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = YarnSpinnerParserRULE_node
}

func (*NodeContext) IsNodeContext() {}

func NewNodeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *NodeContext {
	var p = new(NodeContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = YarnSpinnerParserRULE_node

	return p
}

func (s *NodeContext) GetParser() antlr.Parser { return s.parser }

func (s *NodeContext) BODY_START() antlr.TerminalNode {
	return s.GetToken(YarnSpinnerParserBODY_START, 0)
}

func (s *NodeContext) Body() IBodyContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBodyContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBodyContext)
}

func (s *NodeContext) BODY_END() antlr.TerminalNode {
	return s.GetToken(YarnSpinnerParserBODY_END, 0)
}

func (s *NodeContext) AllHeader() []IHeaderContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IHeaderContext); ok {
			len++
		}
	}

	tst := make([]IHeaderContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IHeaderContext); ok {
			tst[i] = t.(IHeaderContext)
			i++
		}
	}

	return tst
}

func (s *NodeContext) Header(i int) IHeaderContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IHeaderContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IHeaderContext)
}

func (s *NodeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *NodeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *NodeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(YarnSpinnerParserListener); ok {
		listenerT.EnterNode(s)
	}
}

func (s *NodeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(YarnSpinnerParserListener); ok {
		listenerT.ExitNode(s)
	}
}

func (p *YarnSpinnerParser) Node() (localctx INodeContext) {
	localctx = NewNodeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, YarnSpinnerParserRULE_node)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(87)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == YarnSpinnerParserID {
		{
			p.SetState(86)
			p.Header()
		}
